Added personal information

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">Bulka</h1>
-            <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+            <h1 class="contact-info__header">Matvii Vantukh</h1>
+            <h3 class="contact-info__sub-header">Junior Front-End Developer</h3>
 
             <div class="contact_info_container fh">
-              <div class="contact-info__block"></div>
+              <div class="contact-info__block">29-03-2004 Lviv, Ukraine</div>
 
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.png"
+                  src="assets/avatar.jpg"
                   alt="Avatar"
                 />
               </div>
 
-              <div class="contact-info__block"></div>
+              <div class="contact-info__block">+380967415215</div>
             </div>
           </div>
         </div>
