--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
                 </svg>
               </div>
               <p class="intro_text">
-                Meow. I am a Binary Studio cat. Still got 7 lives. Work in IT,
-                Full Stack Evil, all I do is sleep and try to help out hoomans
-                with their projects whenever they need me.
+                Driven student with a stellar academic record, thriving in
+                collaborative environments. Possesses strong communication,
+                teamwork, and problem-solving skills. Eager to contribute
+                enthusiasm and fresh perspectives to make a meaningful impact.
               </p>
             </div>
           </div>
@@ -159,7 +160,7 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Sleep, eat, more sleep, meow, mrrr, purr.
+                ReactJS, HTML, CSS, Redux, React Native, MUI
               </p>
             </div>
           </div>
@@ -172,25 +173,25 @@
                 <div class="experiences__company">
                   <div class="experiences__company-header">
                     <span class="experiences__company-header-durability"
-                      >For whole my life</span
+                      >10.11.2023 - now</span
                     >
                     <h3 class="experiences__company-header-name">
-                      BinaryStudio
+                      _(non comercial)
                     </h3>
                   </div>
 
                   <div class="experiences__company-project">
                     <span class="experiences__company-project-role"
-                      >Binary Studio Cat</span
+                      >Front-End Developer</span
                     >
                     <h3 class="experiences__company-project-name">
-                      Hooman project
+                      App For Indoor Securing
                     </h3>
                     <ul class="experiences__company-project-responsibilities">
-                      <li>Supported hoomans</li>
-                      <li>Slept all the time</li>
-                      <li>Lied on the keyboard</li>
-                      <li>Watched my hoomans working</li>
+                      <li>Front End development</li>
+                      <li>API integration</li>
+                      <li>Socket server integration</li>
+                      <li>Friendly user design</li>
                     </ul>
                   </div>
                 </div>
@@ -208,22 +209,21 @@
                       <h3
                         class="additional-info__education-university-speciality"
                       >
-                        Cat track
+                        Software Engineering
                       </h3>
                       <p class="additional-info__education-university-name">
-                        Binary Studio Academy
+                        NULP
                       </p>
                     </div>
                   </div>
 
                   <div class="additional-info__languages">
                     <h3 class="additional-info__languages-header">Languages</h3>
-                    <p class="additional-info__languages-item">Meow dialect</p>
                     <p class="additional-info__languages-item">
                       Ukrainian (understand)
                     </p>
                     <p class="additional-info__languages-item">
-                      English (don't understand)
+                      English (also understand)
                     </p>
                   </div>
                 </div>
